feat(player_api): Add some logging + performance test
