# player-api/player_api/main.py
@@ -1,18 +1,28 @@
 import os
+import string
+import random
+import time
+from pathlib import Path
 
-from fastapi import FastAPI, HTTPException
+from fastapi import FastAPI, HTTPException, Request
 from fastapi_sqlalchemy import DBSessionMiddleware, db
 from sqlalchemy import func, text, case
+import logging.config
+
 
 from player_api.db import Summoners, Games
-from player_api.models.factories import PlayerModelFactory
 from player_api.models.player import Player, Rank, MostPlayed
 from player_api.models.responses import ExceptionMessage
+
+logging.config.fileConfig(Path(__file__).parent.joinpath("logging.conf"), disable_existing_loggers=False)
+
+logger = logging.getLogger(__name__)
+
 
 app = FastAPI(
     title="Player API",
     version="1.0.0",
-    servers=[{"url": "https://lol-stats.de/api", "name": "production"}],
+    servers=[{"url": "https://lol-stats.de/api"}],
 )
 app.add_middleware(
     DBSessionMiddleware,
@@ -24,6 +34,23 @@ PlayerId = str
 PlayerName = str
 
 
+@app.middleware("http")
+async def log_requests(request: Request, call_next):
+    rid = "".join(random.choices(string.ascii_uppercase + string.digits, k=6))
+    logger.info(f"{rid=} path={request.url.path}")
+    start_time = time.time()
+
+    response = await call_next(request)
+
+    process_time = (time.time() - start_time) * 1000
+    formatted_process_time = "{0:.2f}".format(process_time)
+    logger.info(
+        f"{rid=} completed_in={formatted_process_time}ms status_code={response.status_code}"
+    )
+
+    return response
+
+
 @app.get(
     "/players/{player_name}",
     response_model=Player,
@@ -31,21 +58,19 @@ PlayerName = str
 )
 async def get_player(player_name: PlayerName):
     """Get a player by player name"""
-    player_id = get_player_id(player_name)
-    if player_id is None:
+    logger.debug(f"method=get_player {player_name=}")
+    player = get_player_by_name(player_name)
+    if player is None:
         raise HTTPException(status_code=404, detail="player not found")
+    logger.debug(f"method=get_player {player_name=} {player.puuid=}")
 
-    players: list[Summoners] = (
-        db.session.query(Summoners).where(Summoners.puuid == player_id).all()
-    )
-    player = players[0]
     most_played_db = (
         db.session.query(
             Games.champion_id,
             func.count(Games.champion_id).label("num_played"),
             func.count(case([(Games.win, 1)])).label("won"),
         )
-        .where(Games.summoner_id == player_id)
+        .where(Games.summoner_id == player.puuid)
         .group_by(Games.champion_id)
         .order_by(text("num_played DESC"))
         .limit(5)
@@ -60,18 +85,20 @@ async def get_player(player_name: PlayerName):
                 win_rate=calc_win_rate(games=champ[1], won=champ[2]),
             )
         )
+    logging.debug(f"method=get_player {most_played=}")
 
     result = (
         db.session.query(
             func.count(Games.summoner_id).label("num_played"),
             func.count(case([(Games.win, 1)])).label("won"),
         )
-            .where(Games.summoner_id == player_id)
-            .first()
+        .where(Games.summoner_id == player.puuid)
+        .first()
     )
     win_rate = calc_win_rate(result.num_played, result.won)
+    logging.debug(f"method=get_player {win_rate=}")
     return Player(
-        id=player_id,
+        id=player.puuid,
         icon_path=player.icon_path,
         name=player.name,
         level=player.level,
@@ -83,18 +110,12 @@ async def get_player(player_name: PlayerName):
     )
 
 
-def get_player_id(player_name: str) -> str | None:
+def get_player_by_name(player_name: str) -> Summoners | None:
     with db():
-        players: list[Summoners] = (
-            db.session.query(Summoners).where(Summoners.name == player_name).all()
+        player: Summoners | None = (
+            db.session.query(Summoners).where(Summoners.name == player_name).first()
         )
-        if not players:
-            return None
-        else:
-            assert (
-                len(players) == 1
-            ), f"Player ID should be unique. Got {len(players)} players"
-            return players[0].puuid
+        return player
 
 
 def calc_win_rate(games: int, won: int) -> int:
